--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -9,5 +9,5 @@
     <dimen name="dots_margin_bottom">20dp</dimen>
     <dimen name="mainSelfTextSize">16dp</dimen>
     <dimen name="sendRequire">16sp</dimen>
-    <dimen name="sendRPadding">20</dimen>
+    <dimen name="sendRPadding">10dp</dimen>
 </resources>
