对派件列表的数据的更新

--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -10,4 +10,6 @@
     <dimen name="mainSelfTextSize">16dp</dimen>
     <dimen name="sendRequire">16sp</dimen>
     <dimen name="sendRPadding">10dp</dimen>
+    <dimen name="scOrder">2dp</dimen>
+    <dimen name="sc_order_details">5dp</dimen>
 </resources>
