--- a/app/src/main/res/layout/activity_school_courier.xml
+++ b/app/src/main/res/layout/activity_school_courier.xml
@@ -6,7 +6,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@color/colorGrey"
+        android:background="@color/text_color"
         android:orientation="horizontal">
 
         <TextView
@@ -14,26 +14,49 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:textSize="24sp"
+            android:textColor="@color/white_bg"
             android:text="快递列表" />
 
         <ImageView
             android:id="@+id/imageView10"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
-            android:src="@mipmap/back" />
+            android:src="@mipmap/back_white" />
     </RelativeLayout>
+
+    <FrameLayout
+        android:id="@+id/fragment"
+        android:layout_width="match_parent"
+        android:background="@color/bg"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+    </FrameLayout>
+
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="20dp">
 
-        <ListView
-            android:id="@+id/lv_express"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        </ListView>
+        <TextView
+            android:id="@+id/allOrder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:textSize="16sp"
+            android:text="全部订单"/>
 
+        <TextView
+            android:id="@+id/myOrder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:textSize="16sp"
+            android:text="我的订单"/>
     </LinearLayout>
 
 </LinearLayout>
