--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,9 @@
     <color name="gray">#727069</color>
     <color name="white_bg">#ffffff</color>
     <color name="text_color">#337fe6</color>
+    <color name="sc_state">#fa7a2a</color>
+    <color name="top_bg">#39acfc</color>
+
 
     <!-- Screens background color-->
     <color name="bg_screen1">#f64c73</color>
