--- a/app/src/main/res/layout/activity_cs.xml
+++ b/app/src/main/res/layout/activity_cs.xml
@@ -7,8 +7,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:background="@color/liji_c_blue">
+        android:layout_height="50dp"
+        android:background="@color/title">
 
         <TextView
             android:layout_width="wrap_content"
@@ -16,15 +16,16 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:text="客服"
+            android:textColor="@color/colorGrey"
             android:textSize="24sp" />
 
         <ImageView
-            android:id="@+id/img_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:paddingLeft="20dp"
-            android:src="@mipmap/back" />
+            android:id="@+id/back"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:src="@mipmap/back_white" />
     </RelativeLayout>
 
 
@@ -79,11 +80,7 @@
 
 
     </RelativeLayout>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:background="@color/mainPage">
-    </RelativeLayout>
+
 
 
 
