--- a/app/src/main/res/layout/activity_find_password.xml
+++ b/app/src/main/res/layout/activity_find_password.xml
@@ -8,22 +8,24 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="#dbdbdb"
-        android:orientation="horizontal">
+        android:background="@color/title">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:textSize="24sp"
-            android:text="忘记密码" />
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:text="忘记密码"
+            android:textColor="@color/colorGrey"
+            android:textSize="24sp" />
 
         <ImageView
-            android:id="@+id/img_back_to_login"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
-            android:src="@mipmap/back" />
+            android:id="@+id/back"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:src="@mipmap/back_white" />
     </RelativeLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -36,7 +38,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/input_shape"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="40dp"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
             android:hint="输入手机号" />
@@ -77,12 +79,13 @@
             android:id="@+id/btn_confirm"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
+            android:layout_marginLeft="120dp"
+            android:layout_marginRight="120dp"
             android:layout_marginTop="20dp"
-            android:background="@drawable/shape_btn_login"
+            android:background="@color/button"
             android:gravity="center"
-            android:text="确   认"
+            android:text="确认"
+            android:textColor="@color/colorGrey"
             android:textSize="24dp" />
     </LinearLayout>
 
