--- a/app/src/main/res/layout/activity_modify.xml
+++ b/app/src/main/res/layout/activity_modify.xml
@@ -8,22 +8,24 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@color/colorGrey"
-        android:orientation="horizontal">
+        android:background="@color/title">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:textSize="24sp"
-            android:text="修改资料" />
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:text="修改资料"
+            android:textColor="@color/colorGrey"
+            android:textSize="24sp" />
 
         <ImageView
-            android:id="@+id/imageView10"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
-            android:src="@mipmap/back" />
+            android:id="@+id/back"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:src="@mipmap/back_white" />
     </RelativeLayout>
 
     <TextView
@@ -233,9 +235,10 @@
             android:layout_marginLeft="120dp"
             android:layout_marginRight="120dp"
             android:layout_marginTop="20dp"
-            android:background="@drawable/shape_btn_login"
+            android:background="@color/button"
             android:gravity="center"
-            android:text="确   认"
+            android:text="确  认"
+            android:textColor="@color/colorGrey"
             android:textSize="24dp" />
     </LinearLayout>
 
