--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,22 +6,24 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="#dbdbdb"
-        android:orientation="horizontal">
+        android:background="@color/title">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:textSize="24sp"
-            android:text="注册" />
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:text="注册"
+            android:textColor="@color/colorGrey"
+            android:textSize="24sp" />
 
         <ImageView
-            android:id="@+id/img_back_to_login"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
-            android:src="@mipmap/back" />
+            android:id="@+id/back"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:src="@mipmap/back_white" />
     </RelativeLayout>
 
     <LinearLayout
@@ -115,18 +117,20 @@
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:gravity="center"
         android:layout_height="wrap_content">
 
         <Button
             android:id="@+id/btn_register_confirm"
-            android:layout_width="match_parent"
+            android:layout_width="150dp"
             android:layout_height="50dp"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/shape_btn_login"
+            android:layout_marginTop="5dp"
+            android:background="@color/button"
             android:gravity="center"
-            android:text="确   认"
+            android:text="确 认"
+
             android:textSize="24dp" />
     </LinearLayout>
 
