--- a/app/src/main/res/layout/activity_sc_order_details.xml
+++ b/app/src/main/res/layout/activity_sc_order_details.xml
@@ -7,15 +7,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@color/top_bg">
-
-        <ImageView
-            android:id="@+id/img_back"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_centerVertical="true"
-            android:paddingLeft="20dp"
-            android:src="@mipmap/back_white" />
+        android:background="@color/title">
 
         <TextView
             android:layout_width="wrap_content"
@@ -23,8 +15,16 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:text="派件详情"
-            android:textColor="@color/white_bg"
+            android:textColor="@color/colorGrey"
             android:textSize="24sp" />
+
+        <ImageView
+            android:id="@+id/back"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:src="@mipmap/back_white" />
     </RelativeLayout>
 
     <LinearLayout
