--- a/app/src/main/res/layout/activity_school_courier.xml
+++ b/app/src/main/res/layout/activity_school_courier.xml
@@ -6,23 +6,23 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@color/text_color"
-        android:orientation="horizontal">
+        android:background="@color/title">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:textSize="24sp"
-            android:textColor="@color/white_bg"
-            android:text="快递列表" />
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:text="快递列表"
+            android:textColor="@color/colorGrey"
+            android:textSize="24sp" />
 
         <ImageView
-            android:id="@+id/imageView10"
+            android:id="@+id/back"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
             android:src="@mipmap/back_white" />
     </RelativeLayout>
 
