--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -38,7 +38,7 @@
             android:layout_height="match_parent"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="40dp"
             android:background="@drawable/input_shape"
             android:hint="输入手机号" />
 
@@ -47,25 +47,27 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="40dp"
         android:orientation="horizontal">
 
         <EditText
             android:id="@+id/et_register_identifying_code"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/input_shape"
             android:layout_weight="2"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="40dp"
             android:hint="验证码" />
 
         <TextView
             android:id="@+id/btn__register_get_code"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1.2"
+            android:layout_weight="3"
+            android:layout_marginTop="18dp"
+            android:layout_marginRight="40dp"
             android:background="@drawable/input_shape"
-            android:textSize="18sp"
-            android:hint="获取验证码"/>
+            android:text="获取验证码"/>
 
     </LinearLayout>
 
