--- a/app/src/main/res/layout/activity_find_password.xml
+++ b/app/src/main/res/layout/activity_find_password.xml
@@ -60,12 +60,12 @@
             android:layout_marginLeft="40dp"
             android:hint="验证码" />
 
-        <Button
+        <TextView
             android:id="@+id/btn_get_code"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="3"
-            android:layout_marginTop="18dp"
+            android:layout_marginTop="20dp"
             android:layout_marginRight="40dp"
             android:background="@drawable/input_shape"
             android:text="获取验证码"/>
