--- a/app/src/main/res/layout/activity_write_user_info.xml
+++ b/app/src/main/res/layout/activity_write_user_info.xml
@@ -27,18 +27,20 @@
             android:layout_alignParentTop="true"
             android:src="@mipmap/back_white" />
     </RelativeLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#111"/>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_height="wrap_content">
+
         <ImageView
-            android:id="@+id/img_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@mipmap/ic_launcher"
-            android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
-            />
+            android:layout_marginTop="20dp"
+            android:src="@mipmap/ic_launcher" />
     </LinearLayout>
     <TextView
         android:layout_width="match_parent"
@@ -56,7 +58,7 @@
             android:gravity="center"
             android:textSize="20dp"
             android:layout_weight="4"
-            android:text="手机号"/>
+            android:text="手机号:"/>
         <EditText
             android:id="@+id/et_info_phone_num"
             android:layout_width="match_parent"
@@ -80,7 +82,7 @@
             android:gravity="center"
             android:textSize="20dp"
             android:layout_weight="4"
-            android:text="用户名"/>
+            android:text="用户名:"/>
         <EditText
             android:id="@+id/et_info_username"
             android:layout_width="match_parent"
@@ -104,7 +106,7 @@
             android:gravity="center"
             android:textSize="20dp"
             android:layout_weight="4"
-            android:text="性别"/>
+            android:text="性别:"/>
         <RadioGroup
             android:id="@+id/rg"
             android:layout_width="match_parent"
@@ -117,14 +119,36 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:checked="true"
-                android:text="男" />
+                android:button="@null"
+                android:background="@drawable/radio_button_style"
+                android:checked="false"
+                 />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="5dp"
+                android:textSize="20sp"
+                android:text="男"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"/>
             <RadioButton
                 android:id="@+id/female"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:checked="true"
+                android:button="@null"
+                android:background="@drawable/radio_button_style"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="5dp"
+                android:textSize="20sp"
                 android:text="女"/>
         </RadioGroup>
     </LinearLayout>
@@ -143,7 +167,7 @@
             android:gravity="center"
             android:textSize="20dp"
             android:layout_weight="2"
-            android:text="生日"/>
+            android:text="生日:"/>
         <EditText
             android:id="@+id/et_info_birthday"
             android:layout_width="wrap_content"
@@ -167,7 +191,7 @@
             android:gravity="center"
             android:textSize="20dp"
             android:layout_weight="2"
-            android:text="邮箱"/>
+            android:text="邮箱:"/>
         <EditText
             android:id="@+id/et_info_email"
             android:layout_width="wrap_content"
@@ -190,8 +214,8 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:textSize="20dp"
-            android:layout_weight="3.9"
-            android:text="省市区"/>
+            android:layout_weight="4.1"
+            android:text="省市区:"/>
         <EditText
             android:id="@+id/et_info_province"
             android:layout_width="match_parent"
@@ -220,7 +244,7 @@
             android:gravity="center"
             android:textSize="20dp"
             android:layout_weight="1.6"
-            android:text="详细地址"/>
+            android:text="详细地址:"/>
         <EditText
             android:id="@+id/et_info_address"
             android:layout_width="wrap_content"
