--- a/app/src/main/res/layout/activity_set_up_password.xml
+++ b/app/src/main/res/layout/activity_set_up_password.xml
@@ -39,8 +39,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="密  码:"
-            android:paddingTop="20dp"
-            android:paddingLeft="60dp"
+            android:paddingLeft="30dp"
             android:paddingBottom="20dp"
             android:textSize="20dp"/>
 
@@ -48,29 +47,32 @@
             android:id="@+id/et_su_password"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="10dp" />
+            android:textCursorDrawable="@drawable/edit_cursor_color"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="30dp"/>
 
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
         android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="确认密码:"
-            android:paddingTop="20dp"
-            android:paddingLeft="40dp"
+            android:paddingStart="40dp"
             android:paddingBottom="20dp"
+            android:textCursorDrawable="@drawable/edit_cursor_color"
             android:textSize="20dp"/>
+
 
         <EditText
             android:id="@+id/et_su_confirm__password"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="40dp"
             />
 
     </LinearLayout>
@@ -84,7 +86,7 @@
             android:layout_width="150dp"
             android:layout_height="50dp"
             android:layout_margin="20dp"
-            android:background="@color/button"
+            android:background="@drawable/button_shape"
             android:gravity="center"
             android:text="确 认"
             android:textColor="@color/colorGrey"
