--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,8 @@
     <color name="top_bg">#39acfc</color>
     <color name="button">#166eab</color>
     <color name="title">#38aafb</color>
+    <color name="black">#111111</color>
+
 
 
     <!-- Screens background color-->
