--- a/app/src/main/res/layout/activity_cs.xml
+++ b/app/src/main/res/layout/activity_cs.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:orientation="vertical"
+    android:background="@color/bg"
     android:layout_height="match_parent">
 
     <RelativeLayout
@@ -31,15 +32,16 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="10dp"
         android:background="@color/mainPage"
-        android:paddingBottom="20dp">
+        android:paddingBottom="10dp">
 
 
     </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
+        android:background="@color/colorGrey"
         android:layout_height="60dp">
 
         <TextView
@@ -48,12 +50,18 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="60dp"
             android:text="意见/问题"
-            android:textSize="24sp" />
+            android:textColor="@color/black"
+            android:textSize="16sp" />
 
     </RelativeLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:background="#ebebeb"
+        android:layout_height="2dp" />
 
     <RelativeLayout
         android:layout_width="match_parent"
+        android:background="@color/colorGrey"
         android:layout_height="60dp">
 
         <TextView
@@ -62,12 +70,18 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="60dp"
             android:text="联系某某客服"
-            android:textSize="24sp" />
+            android:textColor="@color/black"
+            android:textSize="16sp" />
 
 
     </RelativeLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:background="#ebebeb"
+        android:layout_height="2dp" />
     <RelativeLayout
         android:layout_width="match_parent"
+        android:background="@color/colorGrey"
         android:layout_height="60dp">
 
         <TextView
@@ -76,7 +90,8 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="60dp"
             android:text="本校快递服务"
-            android:textSize="24sp" />
+            android:textColor="@color/black"
+            android:textSize="16sp" />
 
 
     </RelativeLayout>
