--- a/app/src/main/res/layout/activity_find_password.xml
+++ b/app/src/main/res/layout/activity_find_password.xml
@@ -37,6 +37,7 @@
             android:id="@+id/et_phone_num"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:textCursorDrawable="@drawable/edit_cursor_color"
             android:background="@drawable/input_shape"
             android:layout_marginTop="40dp"
             android:layout_marginLeft="30dp"
@@ -53,9 +54,10 @@
         <EditText
             android:id="@+id/et_identifying_code"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:background="@drawable/input_shape"
             android:layout_weight="2"
+            android:textCursorDrawable="@drawable/edit_cursor_color"
             android:layout_marginTop="20dp"
             android:layout_marginLeft="40dp"
             android:hint="验证码" />
@@ -63,10 +65,11 @@
         <TextView
             android:id="@+id/btn_get_code"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="3"
             android:layout_marginTop="20dp"
             android:layout_marginRight="40dp"
+            android:textSize="16sp"
             android:background="@drawable/input_shape"
             android:text="获取验证码"/>
 
@@ -82,7 +85,7 @@
             android:layout_marginLeft="120dp"
             android:layout_marginRight="120dp"
             android:layout_marginTop="20dp"
-            android:background="@color/button"
+            android:background="@drawable/button_shape"
             android:gravity="center"
             android:text="确认"
             android:textColor="@color/colorGrey"
