--- a/app/src/main/res/layout/activity_freight.xml
+++ b/app/src/main/res/layout/activity_freight.xml
@@ -30,29 +30,35 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="20dp">
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        >
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="24sp"
+            android:textSize="16sp"
             android:text="始发地:"/>
 
         <EditText
             android:id="@+id/et_originating_place"
             android:layout_width="match_parent"
+            android:textCursorDrawable="@drawable/edit_cursor_color"
             android:layout_height="wrap_content" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
         android:layout_height="wrap_content"
-        android:padding="20dp">
+        >
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="24sp"
+            android:textSize="16sp"
+            android:textCursorDrawable="@drawable/edit_cursor_color"
             android:text="目的地:"/>
 
         <EditText
@@ -64,20 +70,22 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="20dp">
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0.4"
-            android:textSize="24sp"
+            android:layout_weight="0.3"
+            android:textSize="16sp"
             android:text="预计重量:"/>
 
         <EditText
             android:id="@+id/et_weight"
             android:layout_width="0dp"
+            android:textCursorDrawable="@drawable/edit_cursor_color"
             android:layout_height="wrap_content"
-            android:layout_weight="2"/>
+            android:layout_weight="2.6"/>
 
         <TextView
             android:layout_width="0dp"
@@ -96,7 +104,7 @@
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:textSize="24sp"
-        android:background="@color/button"
+        android:background="@drawable/button_shape"
         android:layout_margin="20dp"
         android:text="查询"
         android:textColor="@color/colorGrey"/>
