--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,9 +8,9 @@
         android:layout_height="wrap_content">
 
         <LinearLayout
-            android:layout_marginTop="100dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="100dp"
             android:gravity="center"
             android:orientation="vertical">
 
@@ -26,44 +26,52 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
-                android:hint="@string/username_hint"/>
+                android:background="@drawable/input_shape2"
+                android:hint="@string/username_hint"
+                android:textCursorDrawable="@drawable/edit_cursor_color" />
 
             <EditText
                 android:id="@+id/et_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
-                android:layout_marginTop="20dp"
                 android:layout_marginRight="20dp"
-                android:hint="@string/password_hint"/>
+                android:layout_marginTop="20dp"
+                android:background="@drawable/input_shape2"
+                android:hint="@string/password_hint"
+                android:textCursorDrawable="@drawable/edit_cursor_color" />
 
             <Button
                 android:id="@+id/btn_login"
-                android:layout_width="match_parent"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="20dp"
-                android:textSize="24sp"
-                android:background="@drawable/shape_btn_login"
-                android:text="登录"/>
+                android:background="@drawable/button_shape"
+                android:text="登录"
+                android:textColor="@color/colorGrey"
+                android:textSize="24sp" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="40dp"
                 android:layout_marginRight="40dp"
                 android:orientation="horizontal">
+
                 <TextView
                     android:id="@+id/tv_forget_password"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="忘记密码"/>
+                    android:text="忘记密码" />
+
                 <TextView
                     android:id="@+id/tv_register"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="right"
-                    android:text="注册"/>
+                    android:text="注册" />
             </LinearLayout>
         </LinearLayout>
 
