--- a/app/src/main/res/layout/activity_modify.xml
+++ b/app/src/main/res/layout/activity_modify.xml
@@ -61,6 +61,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="3"
+            android:textCursorDrawable="@drawable/edit_cursor_color"
             android:background="@null"
             android:hint="请输入你的昵称" />
     </LinearLayout>
@@ -83,6 +84,7 @@
             android:id="@+id/et_usernames"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:textCursorDrawable="@drawable/edit_cursor_color"
             android:layout_weight="3"
             android:background="@null"
             android:hint="请输入你的用户名" />
@@ -165,6 +167,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="3"
+            android:textCursorDrawable="@drawable/edit_cursor_color"
             android:background="@null"
             android:hint="请输入你的生日" />
     </LinearLayout>
@@ -189,6 +192,7 @@
             android:layout_height="match_parent"
             android:layout_weight="3"
             android:background="@null"
+            android:textCursorDrawable="@drawable/edit_cursor_color"
             android:hint="请输入你的邮箱" />
     </LinearLayout>
     <TextView
@@ -212,6 +216,7 @@
             android:layout_height="match_parent"
             android:layout_weight="2"
             android:background="@null"
+            android:textCursorDrawable="@drawable/edit_cursor_color"
             android:hint="请输入你的省市区" />
         <ImageView
             android:layout_width="0dp"
@@ -240,6 +245,7 @@
             android:layout_height="match_parent"
             android:layout_weight="3"
             android:background="@null"
+            android:textCursorDrawable="@drawable/edit_cursor_color"
             android:hint="请输入你的详细地址" />
     </LinearLayout>
     <TextView
@@ -257,7 +263,7 @@
             android:layout_marginLeft="120dp"
             android:layout_marginRight="120dp"
             android:layout_marginTop="20dp"
-            android:background="@color/button"
+            android:background="@drawable/button_shape"
             android:gravity="center"
             android:text="确  认"
             android:textColor="@color/colorGrey"
