--- a/app/src/main/res/layout/activity_modify_password.xml
+++ b/app/src/main/res/layout/activity_modify_password.xml
@@ -30,45 +30,48 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+
         android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="新密码:"
-            android:paddingTop="20dp"
+            android:paddingTop="10dp"
             android:paddingLeft="60dp"
-            android:paddingBottom="20dp"
-            android:textSize="20dp"/>
+            android:paddingBottom="10dp"
+            android:textSize="20sp"/>
 
         <EditText
             android:id="@+id/et_new_password"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="10dp" />
+            android:layout_marginEnd="20dp"
+            android:textCursorDrawable="@drawable/edit_cursor_color"
+            android:layout_marginStart="10dp" />
 
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
         android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="确认密码:"
-            android:paddingTop="20dp"
-            android:paddingLeft="40dp"
-            android:paddingBottom="20dp"
-            android:textSize="20dp"/>
+            android:paddingTop="10dp"
+            android:paddingStart="40dp"
+            android:paddingBottom="10dp"
+            android:textSize="20sp"/>
 
         <EditText
             android:id="@+id/et_confirm_password"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
+            android:textCursorDrawable="@drawable/edit_cursor_color"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="20dp"
              />
 
     </LinearLayout>
@@ -82,7 +85,7 @@
             android:layout_width="150dp"
             android:layout_height="50dp"
             android:layout_margin="20dp"
-            android:background="@color/button"
+            android:background="@drawable/button_shape"
             android:gravity="center"
             android:textColor="@color/colorGrey"
             android:text="确 认"
