--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -38,7 +38,8 @@
             android:layout_height="match_parent"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="10dp"
+            android:textCursorDrawable="@drawable/edit_cursor_color"
             android:background="@drawable/input_shape"
             android:hint="输入手机号" />
 
@@ -52,21 +53,23 @@
         <EditText
             android:id="@+id/et_register_identifying_code"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:background="@drawable/input_shape"
             android:layout_weight="2"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
+            android:textCursorDrawable="@drawable/edit_cursor_color"
             android:layout_marginLeft="40dp"
             android:hint="验证码" />
 
         <TextView
             android:id="@+id/btn__register_get_code"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="3"
             android:background="@drawable/input_shape"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:layout_marginRight="40dp"
+            android:textSize="16sp"
             android:text="获取验证码"/>
 
     </LinearLayout>
@@ -81,7 +84,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="密  码:"
-            android:paddingTop="20dp"
             android:paddingLeft="30dp"
             android:paddingBottom="20dp"
             android:textSize="20dp"/>
@@ -90,29 +92,31 @@
             android:id="@+id/et_rg_password"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="10dp" />
+            android:textCursorDrawable="@drawable/edit_cursor_color"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="30dp"/>
 
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
         android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="确认密码:"
-            android:paddingTop="20dp"
-            android:paddingLeft="30dp"
+            android:paddingStart="40dp"
             android:paddingBottom="20dp"
+            android:textCursorDrawable="@drawable/edit_cursor_color"
             android:textSize="20dp"/>
 
         <EditText
             android:id="@+id/et_confirm__password"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="40dp"
             />
 
     </LinearLayout>
@@ -129,7 +133,7 @@
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
             android:layout_marginTop="5dp"
-            android:background="@color/button"
+            android:background="@drawable/button_shape"
             android:textColor="@color/colorGrey"
             android:text="确 认"
             android:textSize="24dp" />
