--- a/app/src/main/res/layout/activity_sender_address.xml
+++ b/app/src/main/res/layout/activity_sender_address.xml
@@ -8,16 +8,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="20dp">
-
-        <ImageView
-            android:id="@+id/img_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/back"
-            android:layout_centerVertical="true"
-            android:paddingLeft="20dp"/>
+        android:layout_height="50dp"
+        android:background="@color/title">
 
         <TextView
             android:layout_width="wrap_content"
@@ -25,75 +17,123 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:text="寄件人地址"
-            android:textSize="24sp"/>
+            android:textColor="@color/colorGrey"
+            android:textSize="24sp" />
+
+        <ImageView
+            android:id="@+id/back"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:src="@mipmap/back_white" />
     </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="20dp">
+        >
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16sp"
-            android:text="姓名:"/>
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="20dp"
+            android:text="姓名:"
+            android:textColor="@color/black"/>
 
         <EditText
             android:id="@+id/et_sender_name"
             android:layout_width="match_parent"
+            android:layout_marginTop="10dp"
+            android:background="@null"
+            android:textCursorDrawable="@drawable/edit_cursor_color"
             android:layout_height="wrap_content" />
     </LinearLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:background="#ebebeb"
+        android:layout_marginTop="9dp"
+        android:layout_height="1dp" />
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="20dp">
+        >
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16sp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="20dp"
+            android:textColor="@color/black"
             android:text="手机:"/>
 
         <EditText
             android:id="@+id/et_phone"
+            android:background="@null"
+            android:layout_marginTop="10dp"
+            android:textCursorDrawable="@drawable/edit_cursor_color"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </LinearLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:background="#ebebeb"
+        android:layout_marginTop="9dp"
+        android:layout_height="1dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="20dp">
+        >
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16sp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
+            android:textColor="@color/black"
             android:text="所在地区:"/>
 
         <EditText
             android:id="@+id/et_region"
             android:layout_width="match_parent"
+            android:background="@null"
+            android:layout_marginTop="10dp"
             android:layout_height="wrap_content"
             android:hint="@string/PUA"/>
     </LinearLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:background="#ebebeb"
+        android:layout_marginTop="9dp"
+        android:layout_height="1dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="20dp">
+       >
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16sp"
+            android:layout_marginLeft="20dp"
+            android:textColor="@color/black"
+            android:layout_marginTop="10dp"
             android:text="详细地址:"/>
 
         <EditText
             android:id="@+id/et_detail_address"
             android:layout_width="0dp"
+            android:background="@null"
+            android:layout_marginTop="10dp"
+            android:textCursorDrawable="@drawable/edit_cursor_color"
             android:layout_height="wrap_content"
             android:layout_weight="2"/>
 
@@ -103,7 +143,11 @@
             android:layout_height="30dp"
             android:src="@mipmap/ic_launcher"/>
     </LinearLayout>
-
+    <TextView
+        android:layout_width="match_parent"
+        android:background="#ebebeb"
+        android:layout_marginTop="9dp"
+        android:layout_height="1dp" />
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -145,18 +189,19 @@
             android:layout_alignParentRight="true" />
     </RelativeLayout>
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:gravity="center"
+        android:layout_height="wrap_content">
 
         <Button
             android:id="@+id/btn_commit"
-            android:layout_width="match_parent"
+            android:layout_width="150dp"
             android:layout_height="50dp"
             android:textSize="24sp"
-            android:layout_alignParentBottom="true"
-            android:layout_margin="20dp"
+            android:background="@drawable/button_shape"
+            android:textColor="@color/colorGrey"
             android:text="保存" />
-    </RelativeLayout>
+    </LinearLayout>
 
 </LinearLayout>
