--- a/app/src/main/res/layout/activity_vip.xml
+++ b/app/src/main/res/layout/activity_vip.xml
@@ -19,6 +19,7 @@
             android:id="@+id/track_number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textCursorDrawable="@drawable/edit_cursor_color"
             android:textSize="@dimen/sendRequire"/>
 
     </LinearLayout>
@@ -38,6 +39,7 @@
             android:id="@+id/express_company"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textCursorDrawable="@drawable/edit_cursor_color"
             android:textSize="@dimen/sendRequire"/>
 
     </LinearLayout>
@@ -57,6 +59,7 @@
             android:id="@+id/phone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textCursorDrawable="@drawable/edit_cursor_color"
             android:textSize="@dimen/sendRequire"/>
 
     </LinearLayout>
@@ -76,6 +79,7 @@
             android:id="@+id/address"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textCursorDrawable="@drawable/edit_cursor_color"
             android:textSize="@dimen/sendRequire"/>
 
     </LinearLayout>
@@ -95,6 +99,7 @@
             android:id="@+id/sms"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textCursorDrawable="@drawable/edit_cursor_color"
             android:textSize="@dimen/sendRequire"/>
     </LinearLayout>
 
@@ -113,6 +118,7 @@
             android:id="@+id/remark"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textCursorDrawable="@drawable/edit_cursor_color"
             android:textSize="@dimen/sendRequire"
             android:text="请输入备注"/>
     </LinearLayout>
@@ -126,10 +132,10 @@
             android:id="@+id/commit"
             android:layout_width="150dp"
             android:layout_height="50dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="2dp"
             android:textSize="16sp"
             android:gravity="center"
-            android:background="@color/button"
+            android:background="@drawable/button_shape"
             android:textColor="@color/colorGrey"
             android:text="提 交"/>
     </LinearLayout>
