--- a/app/src/main/res/layout/activity_write_user_info.xml
+++ b/app/src/main/res/layout/activity_write_user_info.xml
@@ -65,6 +65,7 @@
             android:layout_height="match_parent"
             android:layout_weight="2"
             android:background="@null"
+            android:textCursorDrawable="@drawable/edit_cursor_color"
             android:hint="请输入你的手机号" />
     </LinearLayout>
     <TextView
@@ -89,6 +90,7 @@
             android:layout_height="match_parent"
             android:layout_weight="2"
             android:background="@null"
+            android:textCursorDrawable="@drawable/edit_cursor_color"
             android:hint="请输入你的用户名" />
     </LinearLayout>
     <TextView
@@ -174,6 +176,7 @@
             android:layout_height="match_parent"
             android:layout_weight="3"
             android:background="@null"
+            android:textCursorDrawable="@drawable/edit_cursor_color"
             android:hint="请输入你的生日" />
     </LinearLayout>
     <TextView
@@ -198,6 +201,7 @@
             android:layout_height="match_parent"
             android:layout_weight="3"
             android:background="@null"
+            android:textCursorDrawable="@drawable/edit_cursor_color"
             android:hint="请输入你的邮箱" />
     </LinearLayout>
     <TextView
@@ -222,6 +226,8 @@
             android:layout_height="match_parent"
             android:layout_weight="3"
             android:background="@null"
+            android:textCursorDrawable="@drawable/edit_cursor_color"
+
             android:hint="请输入你的省市区" />
         <ImageView
             android:id="@+id/img_get_location"
@@ -251,6 +257,7 @@
             android:layout_height="match_parent"
             android:layout_weight="3"
             android:background="@null"
+            android:textCursorDrawable="@drawable/edit_cursor_color"
             android:hint="请输入你的详细地址" />
     </LinearLayout>
     <TextView
@@ -260,6 +267,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="5dp"
         android:layout_weight="1">
 
         <Button
@@ -268,7 +276,7 @@
             android:layout_height="50dp"
             android:layout_marginLeft="120dp"
             android:layout_marginRight="120dp"
-            android:background="@color/button"
+            android:background="@drawable/button_shape"
             android:gravity="center"
             android:text="确 认"
             android:textColor="@color/colorGrey"
