--- a/app/src/main/res/layout/diy_dialog_item.xml
+++ b/app/src/main/res/layout/diy_dialog_item.xml
@@ -14,7 +14,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:textSize="24sp"
+            android:textSize="12sp"
             android:text="请选择物品类型"/>
 
         <TextView
@@ -35,7 +35,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textSize="24sp"
+            android:textSize="12sp"
             android:gravity="center"
             android:background="@drawable/text_shape"
             android:text="文件"/>
@@ -44,7 +44,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textSize="24sp"
+            android:textSize="12sp"
             android:gravity="center"
             android:background="@drawable/text_shape"
             android:text="数码产品"/>
@@ -53,7 +53,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textSize="24sp"
+            android:textSize="12sp"
             android:gravity="center"
             android:background="@drawable/text_shape"
             android:text="生活用品"/>
@@ -69,7 +69,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textSize="24sp"
+            android:textSize="12sp"
             android:gravity="center"
             android:background="@drawable/text_shape"
             android:text="服饰"/>
@@ -78,28 +78,27 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textSize="24sp"
+            android:textSize="12sp"
             android:gravity="center"
             android:background="@drawable/text_shape"
             android:text="食品"/>
+
         <Button
             android:id="@+id/tv_other"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:textSize="24sp"
-            android:gravity="center"
             android:background="@drawable/text_shape"
-            android:text="其他"/>
+            android:gravity="center"
+            android:text="其他"
+            android:textSize="12sp" />
     </LinearLayout>
-
-
 
     <Button
         android:id="@+id/btn_dialog_confirm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="24sp"
+        android:textSize="12sp"
         android:text="确认"/>
 
 </LinearLayout>
