--- a/app/src/main/res/layout/activity_cs.xml
+++ b/app/src/main/res/layout/activity_cs.xml
@@ -9,7 +9,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@color/title">
+        android:background="@color/top_bg">
 
         <TextView
             android:layout_width="wrap_content"
