--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -61,7 +61,7 @@
             android:layout_marginLeft="40dp"
             android:hint="验证码" />
 
-        <TextView
+        <Button
             android:id="@+id/btn__register_get_code"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
