--- a/app/src/main/res/layout/item_sc_order_list.xml
+++ b/app/src/main/res/layout/item_sc_order_list.xml
@@ -19,7 +19,7 @@
             android:text="名字："/>
 
         <TextView
-            android:id="@+id/username"
+            android:id="@+id/sc_username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
